--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>jQuery.SwapStyle()</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-		<script src="../jquery.swapstyle.min.js"></script>
+		<script src="jquery.swapstyle.min.js"></script>
 		<link rel="stylesheet" type="text/css" media="all" href="styles/three.css" />
 		<style type="text/css">
 			@import url(http://fonts.googleapis.com/css?family=Open+Sans|Oswald);
