Added link to repo

--- a/tests/index.html
+++ b/tests/index.html
@@ -11,7 +11,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>jQuery.SwapStyle()</h1>
+		<h1><a href="https://www.github.com/btleffler/jQuery-SwapStyle/" title="Source and Documentation">jQuery.SwapStyle()</a></h1>
 		<h2>Author: <a href="http://www.btleffler.com/" title="btleffler.com">Benjamin Leffler</a></h2>
 		<fieldset class="theForm">
 			<legend>Styled by link tag</legend>
